[package]
name = "sos-client"
version = "0.1.0"
authors = ["h <besqer996@gnu.ac.kr>"]
edition = "2018"

description = "Super-Simple Source fileSystem Client"
homepage = "https://github.com/podo-os"
repository = "https://github.com/podo-os/sos-client"
readme = "README.md"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["cache"]

cache = ["bincode", "serde"]

[dependencies]
bincode = { version = "1.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
